fix(applications): prereq course desc truncation

--- a/static/common/css/globals_output.css
+++ b/static/common/css/globals_output.css
@@ -2758,6 +2758,12 @@
   .max-w-\[20ch\] {
     max-width: 20ch;
   }
+  .max-w-\[30ch\] {
+    max-width: 30ch;
+  }
+  .max-w-\[40ch\] {
+    max-width: 40ch;
+  }
   .max-w-\[100px\] {
     max-width: 100px;
   }
@@ -2882,6 +2888,9 @@
   }
   .grid-cols-\[2fr_1fr_1fr_1fr_1fr_3fr_0\.5fr\] {
     grid-template-columns: 2fr 1fr 1fr 1fr 1fr 3fr 0.5fr;
+  }
+  .grid-cols-\[2fr_1fr_1fr_1fr_1fr_4fr_0\.5fr\] {
+    grid-template-columns: 2fr 1fr 1fr 1fr 1fr 4fr 0.5fr;
   }
   .grid-cols-\[2fr_1fr_1fr_1fr_3fr\] {
     grid-template-columns: 2fr 1fr 1fr 1fr 3fr;
